<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <EditText
        android:id="@+id/profile_password"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/contra"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <Button
        android:id="@+id/cambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cambiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/profile_user"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_avatar" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/profile_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_user"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toTopOf="@+id/profile_password"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />
</androidx.constraintlayout.widget.ConstraintLayout>