<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/nombre"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/apellido"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/nuevoturno"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@tools:sample/last_names" />

    <Button
        android:id="@+id/nuevoturno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/nuevo"
        app:layout_constraintEnd_toEndOf="@+id/apellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <TextView
        android:id="@+id/turnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/turno"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nuevoturno" />

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="147dp"
        android:layout_height="171dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/nuevoturno"
        app:layout_constraintEnd_toStartOf="@+id/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/divider8"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turnos"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mis_turnos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/misTurnos"
        app:layout_constraintEnd_toEndOf="@+id/nuevoturno"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/nuevoturno"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

</androidx.constraintlayout.widget.ConstraintLayout>